# RoboticaG10

./: README.md
actividad1/: chocachoca.cdsl
actividad1/etc/: config
actividad1/src/: CMakeLists.txt  mainUI.ui  specificworker.cpp  specificworker.h
actividad2/src/: CMakeLists.txt  mainUI.ui  specificworker.cpp  specificworker.h
actividad3/: CMakeLists.txt
actividad3/etc/: config
actividad3/src/: CMakeLists.txt  door_detector.cpp  nominal_room.h  specificworker.cpp  specificworker.h
actividad4/: CMakeLists.txt  mosaic.py  my_network.pt  organiser.cdsl  sub.toml  test_model.py  train_model.py
actividad4/localiser/: CMakeLists.txt  organiser.cdsl
actividad4/localiser/etc/: config
actividad4/localiser/src/: door_detector.cpp  nominal_room.h  room_detector.cpp  specificworker.cpp  specificworker.h
actividad4/mnist_detector/src/: specificworker.py  specificworker.py.new
actividad4/src/: common_types.h  door_detector.cpp  nominal_room.h  specificworker.cpp  specificworker.h
ejemplo1/: CMakeLists.txt  counterDlg.ui  ejemplo1.cpp  ejemplo1.h
ejemplo1_threads/: CMakeLists.txt  Timer.h  counterDlg.ui  ejemplo1.cpp  ejemplo1.h
ejemplo2/: CMakeLists.txt  main.cpp
